@@ -1,6 +1,9 @@
 master
 ------
 
+        * Added CURLOPT_SOCKOPTFUNCTION. CURLOPT_SOCKOPTDATA is used
+          internally by PycURL.
+
         * Added CURLOPT_SSH_KEYFUNCTION (libcurl 7.19.6+).
           CURLOPT_SSH_KEYDATA is used internally by PycURL.
 
